<resources>
    <string name="app_name">MagicBall</string>
    <string name="header">Conoce tu futuro</string>
    <string name="titulo">Escribe una pregunta que te gustaría que adivinara: </string>
    <string name="mensaje">Escribe tu mensaje</string>
    <string name="advice">Presiona la imagen de la bola para saber la respuesta</string>
    <string name="imageball">MagicBall</string>
    <string name="text_respuesta">Mi respuesta es:</string>
    <string name="respuesta">...</string>
</resources>